# pyGAlib

./: .gitignore  CHANGELOG.md  CHANGES.md  LICENSE.txt  README.md  README.rst  README.rtf  README.txt  TODO.md  TODO.rst  galib (Copia en conflicto de lc3.physik.hu-berlin.de 2013-11-19).py  galib.py  galib_extra.py  galib_numba.py  galib_numba_test.py  gamodels (Copia en conflicto de lc3.physik.hu-berlin.de 2013-11-19).py  gamodels.py  gamodels_numba.py  gamodels_test.py  gatools.py  info.py  pyproject.toml  requirements.txt  setup.py  setup_old.py
Data/: Cat53_labels.txt  dolphins.net
Data/WorldTradeWebs/: WTW1949.txt  WTW1952.txt  WTW1953.txt  WTW1955.txt  WTW1957.txt  WTW1959.txt  WTW1960.txt  WTW1961.txt  WTW1963.txt  WTW1966.txt  WTW1969.txt  WTW1971.txt  WTW1972.txt  WTW1973.txt  WTW1978.txt  WTW1979.txt  WTW1981.txt  WTW1983.txt  WTW1985.txt  WTW1986.txt  WTW1988.txt  WTW1990.txt  WTW1991.txt  WTW1992.txt  WTW1994.txt  WTW1999.txt
Docs/: GettingStarted.ipynb  GettingStarted.md
Examples/: ComputeRichClub_1.py  ComputeRichClub_2.py  Compute_RichClub_Directed.py  Compute_RichClub_Undirected.py  DataConversions.py  Participation_and_Roles.ipynb  RichClub_Directed.py  RichClub_Undirected.ipynb  RichClub_Undirected.py  Roles_CatCortex.py  Roles_HierarchicalNets.py  WeightedGraphs_Intro.ipynb  Weighted_Random_Graphs.ipynb
TestModules/: galib_test.py  gatools_test.py
TestResources/: labels.txt
UtilityScripts/: GenerateRandomNetworks.py  GenerateRewiredNetworks.py  GenerateSFNetworks.py
galib/: __init__.py  borrar.rst  extra.py  metrics.py  metrics_numba.py  models.py  models_numba.py  tools.py
galib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyGAlib/: GAlib_info.py  galib.py  galib_numba.py  gamodels.py  gatools.py
tests/: galib_numba_test.py  galib_test.py  gamodels_test.py  gatools_test.py
(+73 files in other folders)
